# SomeSense-App

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang_toolchain.cmake  compiler_flags.cmake  environment.yml
assets/od_model/: centernet2d_quant_int8_edgetpu.tflite  prior_boxes.json  semseg_quant_int8_edgetpu.tflite
common/cmake/: clang_toolchain.cmake
components/algo/cam_calib/: CMakeLists.txt  cam_calib.cpp
components/algo/example/: CMakeLists.txt
components/algo/inference/: CMakeLists.txt  inference.cpp  inference.h  params.h
components/algo/optical_flow/: CMakeLists.txt  optical_flow.cpp  optical_flow.h
components/algo/pointcloud/: CMakeLists.txt  pointcloud.cpp  pointcloud.h
components/algo/semseg/: CMakeLists.txt  params.h  semseg.cpp  semseg.h
components/algo/tracking/: CMakeLists.txt  tracker.cpp  tracker.h
components/com_out/: CMakeLists.txt  ibroadcast.h  irequest_listener.h  output_state.h  server.cpp  server.h  tcp_server.cpp  tcp_server.h  unix_server.cpp  unix_server.h  unix_socket_server.cpp  unix_socket_server.h
components/data_reader/: CMakeLists.txt  rec_storage.cpp  rec_storage.h  sensor_storage.cpp  sensor_storage.h  storage_service.cpp  storage_service.h
components/data_reader/cams/: base_cam.cpp  base_cam.h  carla.cpp  carla.h  csi_cam.cpp  csi_cam.h  icam.h  rec_cam.cpp  rec_cam.h  usb_cam.cpp  usb_cam.h  video_cam.cpp  video_cam.h
components/data_reader/rec/: creator.cpp  creator.h  own_capnp.h
components/data_reader/sim/: README.md  example_scene.hpp  iscene.h
components/example/: CMakeLists.txt  copy.sh  example.cpp  example.h
components/example/src/: CMakeLists.txt
components/frame/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  main.cpp  output_storage.cpp  output_storage.h  output_types.h  runtime_meas_service.cpp  runtime_meas_service.h
components/frame/src/: CMakeLists.txt  adder.cpp  adder.h
components/frame/test/: CMakeLists.txt
components/object_detection/: CMakeLists.txt  buffer.h  detector.cpp  detector.h  logger.h  trt_logger.h
components/online_calibration/: CMakeLists.txt  online_calibration.cpp  online_calibration.h
components/optical_flow/: CMakeLists.txt  optical_flow.cpp  optical_flow.h
components/output/: CMakeLists.txt  frame.capnp  output_types.capnp  output_types.proto  storage.cpp  storage.h  storage_service.cpp  storage_service.h  types.cpp  types.h
components/serialize/: CMakeLists.txt  app_state.cpp  app_state.h  frame.capnp  frame.fbs  save_to_file.cpp
components/utilities/: CMakeLists.txt  base64.cpp  base64.h  config.cpp  config.h  image.hpp  img.cpp  img.h
configs/: README.md  csi.json  live_sensors.json  live_sensors_csi.json  live_sensors_usb.json  sim_pb.json  sim_rec.json  sim_sensors.json  sim_sensors_ts.json  sim_video.json  usb.json
nodes/: READM.md
nodes/algo_example/: CMakeLists.txt
nodes/read/: CMakeLists.txt  some.h
nodes/read/configs/: csi.json  sim_carla.json  sim_rec.json
nodes/read/src/: main.cpp
nodes/read/test/: CMakeLists.txt  test_x.cpp
scripts/: build.py  build.sh  dependencies.sh  prj_config.yml
src/algo/: CMakeLists.txt  scheduler.cpp  scheduler.h
src/algo/cam_calib/: cam_calib.cpp  cam_calib.h  params.h
src/algo/example/: example.cpp  example.h
src/algo/inference/: inference.cpp  inference.h  params.h
src/algo/pointcloud/: pointcloud.cpp  pointcloud.h
src/algo/scheduler/: scheduler.cpp  scheduler.h
src/algo/tracking/: tracker.cpp  tracker.h
src/com_out/: CMakeLists.txt  irequest_handler.h  irequest_listener.h  server.h  tcp_server.h
src/data/: CMakeLists.txt  sensor_storage.cpp  sensor_storage.h
src/data/camera/: csi_cam.cpp  csi_cam.h  icam.h  usb_cam.cpp  usb_cam.h  video_cam.cpp  video_cam.h
src/data/rec/: irec.h  pb_rec.cpp  pb_rec.h  video_rec.cpp  video_rec.h
src/data_reader/: CMakeLists.txt  sensor_storage.cpp  sensor_storage.h  types.h
src/data_reader/cams/: carla.cpp  carla.h  csi_cam.h  video_cam.h
src/data_reader/sim/: README.md
src/frame/: CMakeLists.txt  app.cpp  config.h  icom.h  main.cpp  runtime_meas_service.cpp  runtime_meas_service.h  types.h
src/frame/custom/: tcp_server.cpp  tcp_server.h
src/frame/ecal/: CMakeLists.txt  config.h  ecal_nodes.cpp  ecal_nodes.h  main.cpp
src/interface/: CMakeLists.txt  frame.capnp  types.capnp
src/interface/algo/: inference.capnp  scheduler.capnp
src/serialize/: CMakeLists.txt  save_to_file.cpp  save_to_file.h
src/tools/: CMakeLists.txt
src/tools/ecal_test/: CMakeLists.txt  main.cpp
src/tools/manual_calib/: CMakeLists.txt  main.cpp
src/util/: CMakeLists.txt  cam.cpp  cam.h  img.h  proto.cpp  proto.h  runtime_meas_service.cpp  runtime_meas_service.h  time.cpp  time.h  types.h
test/: CMakeLists.txt
test/data_reader/cams/: test_base_cam.cpp
test/frame/: CMakeLists.txt  test_adder.cpp  test_app.cpp
