SET(COMPONENT_NAME "object_detection")


include_directories(
  ${OpenCV_INCLUDE_DIRS}
  ${TENSORFLOW_LITE_DEPENDENCIES_INCLUDE_DIR}
  ${TENSORFLOW_LITE_INCLUDE_DIR}
)

add_library(lib${COMPONENT_NAME} 
  detector.cpp
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${INSTALL_INCLUDE_DIR}/${COMPONENT_NAME} FILES_MATCHING PATTERN "*.h*")
install(TARGETS lib${COMPONENT_NAME} DESTINATION ${INSTALL_LIB_DIR})
