SET(COMPONENT_NAME "utilities")

#add_library(lib${COMPONENT_NAME} )

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${INSTALL_INCLUDE_DIR}/${COMPONENT_NAME} FILES_MATCHING PATTERN "*.h*")
# no .cpp files yet so no need to create a lib yet
# install(TARGETS lib${COMPONENT_NAME} DESTINATION ${INSTALL_LIB_DIR})
