SET(COMPONENT_NAME "semseg")

include_directories(SYSTEM
  ${OpenCV_INCLUDE_DIRS}
  ${CMAKE_BINARY_DIR}/components
)

add_library(lib${COMPONENT_NAME}
  semseg.cpp
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION ${INSTALL_INCLUDE_DIR}/algo/${COMPONENT_NAME} FILES_MATCHING PATTERN "*.h*")
install(TARGETS lib${COMPONENT_NAME} DESTINATION ${INSTALL_LIB_DIR})
